Fix building QtGrpc without SSL support

Move QGrpcChannelOptions::metadata() definition out of the
if Qt_CONFIG(ssl) scope.

Fixes: QTBUG-114237
Pick-to: 6.6
Change-Id: I4cd9d2a880016a2946315484c5749f4c2c79057f
Reviewed-by: Dimitrios Apostolou <jimis@qt.io>